<resources>
    <string name="app_name">CoinCraft</string>
    <string name="coin_craft">Coin Craft</string>
    <string name="home">Home</string>
    <string name="balance">Balance</string>
    <string name="hp">HP</string>
    <string name="gold">1000.00</string>
    <string name="coin_icon">Coin Icon</string>
    <string name="debt">Debt</string>
    <string name="budgeting">Budgeting</string>
    <string name="transaction">Transaction</string>
    <string name="expense_tracker">Expense Tracker</string>
    <string name="category">Category</string>
    <string name="total_spent">Total Spent:</string>
    <string name="total_earned">Total Earned:</string>
    <string name="progress">Progress</string>
    <string name="description">Description</string>
    <string name="goal">Goal</string>
    <string name="item">item</string>
    <string name="finacial_goal">Financial Goal</string>
</resources>