<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="150dp"
    android:layout_height="200dp"
    android:backgroundTint="@color/yellow_primary"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_margin="5dp"
    app:cardCornerRadius="20dp"
    app:cardElevation="8dp">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:gravity="center"
        android:orientation="vertical">

        <ImageView
            android:id="@+id/goal_icon"
            android:layout_width="30dp"
            android:layout_height="30dp"
            android:scaleType="centerCrop"
            android:src="@drawable/expense"/>

        <TextView
            android:id="@+id/goal_type"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/goal"
            android:layout_marginTop="15dp"
            android:textSize="20sp"
            android:fontFamily="@font/silkscreen"/>
        <TextView
            android:id="@+id/goal_name"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="10dp"
            android:textAlignment="center"
            android:text="@string/description"
            android:fontFamily="@font/silkscreen"/>
        <TextView
            android:id="@+id/goal_progress"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/progress"
            android:layout_marginTop="10dp"
            android:fontFamily="@font/silkscreen"/>

        <TextView
            android:id="@+id/goal_deadline"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/progress"
            android:fontFamily="@font/silkscreen"/>

    </LinearLayout>

</androidx.cardview.widget.CardView>