<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="@color/light_yellow"
    tools:context=".Home">

    <LinearLayout
        android:id="@+id/top_bar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/yellow_primary"
        app:layout_constraintBottom_toTopOf="@+id/scrollView2"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <TextView
            android:id="@+id/coin_craft"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_margin="20dp"
            android:layout_weight="1"
            android:fontFamily="@font/silkscreen"
            android:text="@string/coin_craft"
            android:textAppearance="@style/coin_craft"
            android:textSize="30sp" />

        <ImageButton
            android:id="@+id/notif_bell"
            android:layout_width="60dp"
            android:layout_height="60dp"
            android:layout_gravity="center"
            android:background="@color/transparent"
            android:padding="20dp"
            android:scaleType="centerCrop"
            android:src="@drawable/bell" />

        <ImageButton
            android:id="@+id/settings_btn"
            android:layout_width="60dp"
            android:layout_height="60dp"
            android:layout_gravity="center"
            android:background="@color/transparent"
            android:padding="20dp"
            android:scaleType="centerCrop"
            android:src="@drawable/ellipses_vertical" />

    </LinearLayout>

    <ScrollView
        android:id="@+id/scrollView2"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:elevation="-10dp"
        app:layout_constraintBottom_toTopOf="@+id/botnav"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/top_bar">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:clipChildren="false"
            android:clipToOutline="false"
            android:clipToPadding="false"
            android:orientation="vertical"
            android:padding="20dp">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:fontFamily="@font/silkscreen"
                android:text="@string/home"
                android:textSize="20sp" />

            <androidx.cardview.widget.CardView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginVertical="10dp"
                app:cardElevation="20dp"
                app:cardCornerRadius="20dp">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:elevation="10dp"
                    android:orientation="horizontal"
                    android:padding="25dp">

                    <com.google.android.material.card.MaterialCardView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content">

                        <ImageView
                            android:layout_width="100dp"
                            android:layout_height="100dp"
                            android:scaleType="centerCrop"
                            android:src="@drawable/pfp" />

                    </com.google.android.material.card.MaterialCardView>

                    <LinearLayout
                        android:layout_width="wrap_content"
                        android:layout_height="match_parent"
                        android:layout_weight="1"
                        android:orientation="vertical"
                        android:paddingHorizontal="10dp">

                        <LinearLayout
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_margin="5dp">

                            <ImageView
                                android:layout_width="20dp"
                                android:layout_height="20dp"
                                android:src="@drawable/heart" />

                            <TextView
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:layout_marginStart="5dp"
                                android:layout_marginBottom="4dp"
                                android:fontFamily="@font/silkscreen"
                                android:text="@string/hp"
                                android:textColor="@android:color/black"
                                android:textSize="15sp" />

                        </LinearLayout>

                        <ProgressBar
                            android:id="@+id/hp_bar"
                            style="@android:style/Widget.ProgressBar.Horizontal"
                            android:layout_width="match_parent"
                            android:layout_height="15dp"
                            android:max="100"
                            android:progress="100"
                            android:progressDrawable="@drawable/hp_bar" />

                        <LinearLayout
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_margin="5dp">

                            <ImageView
                                android:layout_width="20dp"
                                android:layout_height="20dp"
                                android:src="@drawable/arrow_circle_up" />

                            <TextView
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:layout_marginStart="5dp"
                                android:layout_marginBottom="4dp"
                                android:fontFamily="@font/silkscreen"
                                android:text="Level 1"
                                android:textColor="@android:color/black"
                                android:textSize="15sp" />

                        </LinearLayout>

                        <ProgressBar
                            android:id="@+id/xp_bar"
                            style="@android:style/Widget.ProgressBar.Horizontal"
                            android:layout_width="match_parent"
                            android:layout_height="15dp"
                            android:max="100"
                            android:progress="70"
                            android:progressDrawable="@drawable/xp_bar" />

                    </LinearLayout>

                </LinearLayout>

            </androidx.cardview.widget.CardView>

            <androidx.cardview.widget.CardView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginVertical="10dp"
                app:cardElevation="20dp"
                app:cardCornerRadius="20dp">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:padding="20dp">

                    <TextView
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:fontFamily="@font/silkscreen"
                        android:text="@string/balance"
                        android:textSize="20sp" />

                    <ImageView
                        android:layout_width="30dp"
                        android:layout_height="30dp"
                        android:layout_marginTop="50dp"
                        android:contentDescription="@string/coin_icon"
                        android:src="@drawable/coin" />

                    <TextView
                        android:id="@+id/balance_amount"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="5dp"
                        android:layout_marginTop="50dp"
                        android:fontFamily="@font/silkscreen"
                        android:text="@string/gold"
                        android:textSize="25sp" />

                </LinearLayout>

            </androidx.cardview.widget.CardView>

            <androidx.cardview.widget.CardView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginVertical="10dp"
                app:cardCornerRadius="20dp"
                app:cardElevation="20dp">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_margin="20dp"
                    android:orientation="vertical">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginBottom="25dp"
                        android:fontFamily="@font/silkscreen"
                        android:text="Total Gold Earned/Spent"
                        android:textSize="20sp" />

                    <LinearLayout
                        android:id="@+id/income"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:orientation="horizontal">

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_weight="1"
                            android:fontFamily="@font/silkscreen"
                            android:text="@string/total_earned"
                            android:textSize="15sp" />

                        <ImageView
                            android:layout_width="15dp"
                            android:layout_height="15dp"
                            android:layout_gravity="center"
                            android:scaleType="centerCrop"
                            android:src="@drawable/coin" />

                        <TextView
                            android:id="@+id/earned_amount"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_marginStart="5dp"
                            android:fontFamily="@font/silkscreen"
                            android:text="@string/gold"
                            android:textSize="15sp" />

                    </LinearLayout>

                    <ProgressBar
                        android:id="@+id/earned_bar"
                        style="@android:style/Widget.ProgressBar.Horizontal"
                        android:layout_width="match_parent"
                        android:layout_height="20dp"
                        android:layout_marginVertical="10dp"
                        android:max="100"
                        android:progress="100"
                        android:progressDrawable="@drawable/earned_bar" />

                    <LinearLayout
                        android:id="@+id/spent"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:orientation="horizontal">

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_weight="1"
                            android:fontFamily="@font/silkscreen"
                            android:text="@string/total_spent"
                            android:textSize="15sp" />

                        <ImageView
                            android:layout_width="15dp"
                            android:layout_height="15dp"
                            android:layout_gravity="center"
                            android:scaleType="centerCrop"
                            android:src="@drawable/coin" />

                        <TextView
                            android:id="@+id/spent_amount"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_marginStart="5dp"
                            android:fontFamily="@font/silkscreen"
                            android:text="@string/gold"
                            android:textSize="15sp" />

                    </LinearLayout>

                    <ProgressBar
                        android:id="@+id/spent_bar"
                        style="@android:style/Widget.ProgressBar.Horizontal"
                        android:layout_width="match_parent"
                        android:layout_height="20dp"
                        android:layout_marginVertical="10dp"
                        android:max="100"
                        android:progress="100"
                        android:progressDrawable="@drawable/spent_bar" />

                </LinearLayout>

            </androidx.cardview.widget.CardView>

            <androidx.cardview.widget.CardView
                android:id="@+id/finacial_card"
                android:layout_width="match_parent"
                android:layout_height="290dp"
                android:layout_marginVertical="10dp"
                app:cardElevation="20dp"
                app:cardCornerRadius="20dp">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_margin="20dp"
                    android:fontFamily="@font/silkscreen"
                    android:text="@string/finacial_goal"
                    android:textSize="20sp" />

                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal"
                    android:layout_marginTop="50dp"
                    android:layout_marginStart="20dp"
                    android:layout_marginBottom="20dp"
                    android:elevation="8dp">

                    <androidx.recyclerview.widget.RecyclerView
                        android:id="@+id/horizontal_finacial_goal_rv"
                        android:layout_width="wrap_content"
                        android:layout_height="match_parent"
                        android:layout_marginEnd="10dp"/>



                </LinearLayout>

                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:orientation="vertical">

                    <ImageView
                        android:id="@+id/empty_list_icon"
                        android:layout_width="50dp"
                        android:layout_height="50dp"
                        android:layout_gravity="center"
                        android:src="@drawable/dinosaur"
                        tools:visibility="invisible" />

                    <TextView
                        android:id="@+id/empty_list_text"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center"
                        android:fontFamily="@font/silkscreen"
                        android:text="No Goals"
                        tools:visibility="invisible" />

                </LinearLayout>




            </androidx.cardview.widget.CardView>


        </LinearLayout>

    </ScrollView>

    <com.google.android.material.floatingactionbutton.FloatingActionButton
        android:id="@+id/plus_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_margin="16dp"
        android:backgroundTint="@color/yellow_primary"
        android:contentDescription="Add"
        android:elevation="8dp"
        android:src="@drawable/plus"
        android:tint="@android:color/white"
        app:fabSize="normal"
        app:layout_constraintBottom_toBottomOf="@+id/scrollView2"
        app:layout_constraintEnd_toEndOf="parent"
        tools:ignore="ExtraText" />

    <com.google.android.material.bottomnavigation.BottomNavigationView
        android:id="@+id/botnav"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:elevation="30dp"
        app:backgroundTint="@color/white"
        app:itemIconTint="@color/yellow_primary"
        app:labelVisibilityMode="labeled"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/scrollView2"
        app:menu="@menu/bottom_nav_menu" />

</androidx.constraintlayout.widget.ConstraintLayout>